@@ -220,11 +220,8 @@ class DefaultDublinCoreImpl( PropertyManager ):
     def Type( self ):
         """ Dublin Core Type element - resource type.
         """
-        if hasattr(aq_base(self), 'getTypeInfo'):
-            ti = self.getTypeInfo()
-            if ti is not None:
-                return ti.Title()
-        return self.meta_type
+        ti = self.getTypeInfo()
+        return ti is not None and ti.Title() or 'Unknown'
 
     security.declareProtected(View, 'Format')
     def Format( self ):
